# proj1

./: .gitignore  Diagrama sem nome.drawio  README.md  db.py  main.py  menumethods.py  pyproject.toml
