[tool.poetry]
name = "proj1"
version = "0.1.0"
description = "99% of gambling addicts quit right before hitting it big. You can win 2000% of your money, but can only lose 100% of your money. Do the math."
authors = ["davMac606 <worksender053@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
